package dk.emilxaviervt._2025ice.Items;

public class Equipment {
}
