package dk.emilxaviervt._2025ice.gameLogic;

public class Creature {
    private String monsterName;
    private int currentHealth;
    private int currentAttack;

    public Creature(String monsterName, int currentHealth, int currentAttack){
        this.monsterName = monsterName;
        this.currentHealth = currentHealth;
        this.currentAttack = currentAttack;

    }

}


