package dk.emilxaviervt._2025ice.util;

public class TextUI {

}
